# MySecondBrainApp

./: .gitignore
frontend/: index.html
frontend/src/: App.tsx  index.css
frontend/src/app/: App.tsx  routes.ts
frontend/src/app/components/: AIChat.tsx  AISummary.tsx  GlobalDragOverlay.tsx  GraphView.tsx  NoteWriter.tsx  PDFViewer.tsx  RelatedTopicsGraph.tsx  SearchBar.tsx  SearchResults.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/app/contexts/: DocumentContext.tsx
frontend/src/app/layouts/: RootLayout.tsx
frontend/src/app/pages/: DocumentView.tsx  NewNotePage.tsx  SearchPage.tsx
frontend/src/components/: CreateContentModal.tsx  Sidebar.tsx  SidebarItem.tsx
frontend/src/hooks/: useOutsideClick.ts
frontend/src/icons/: CrossIcon.tsx  LogoIcon.tsx  PlusIcon.tsx  ShareIcon.tsx  TwitterIcon.tsx  YoutubeIcon.tsx
frontend/src/pages/: Dashboard.tsx  Signup.tsx
server/: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
server/src/: index.ts  server.ts  types.ts  utils.ts
server/src/controllers/: auth.ts  brain.ts  content.ts  document.controllers.ts  signin.ts  signup.ts
server/src/db/: connectDb.ts  db.ts
server/src/errors/: customApi.ts  unauthenticated.ts
server/src/middlewares/: auth.ts  upload.middleware.ts
server/src/models/: Chunk.ts  Content.ts  Document.ts  Link.ts  Tag.ts  User.ts
server/src/routers/: authRouter.ts  brainRouter.ts  contentRouter.ts
server/src/routes/: document.router.ts
server/src/services/: chunk.service.ts  pdf.service.ts
vector_service/: main.py  pyproject.toml  test.py
(+4 files in other folders)
